Fix card text spacing and padding

--- a/style.css
+++ b/style.css
@@ -217,12 +217,18 @@ body {
   color: black;
   text-align: left;
   height: 200px;
+  padding: 10px;
 }
 
 .card p {
   color: rgb(38, 38, 38);
   font-weight: normal;
   font-size: 14px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
 }
 
 .card .card-title {
